tests/.nts/error/links_syntax_error4.nts
.chipsets:
input  in
output out

.links:
in:1 out1